[task] Проекты смержены в один

--- a/tests/Spx.Collections.UnitTests/Spx.Collections.UnitTests.csproj
+++ b/tests/Spx.Collections.UnitTests/Spx.Collections.UnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\source\Spx.Collections\Spx.Collections.csproj" />
+    <ProjectReference Include="..\..\source\Spx.Core\Spx.Core.csproj" />
   </ItemGroup>
 
 </Project>
