--- a/tests/Spx.Reflection.UnitTests/Spx.Reflection.UnitTests.csproj
+++ b/tests/Spx.Reflection.UnitTests/Spx.Reflection.UnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\source\Spx.Reflection\Spx.Reflection.csproj" />
+    <ProjectReference Include="..\..\source\Spx.Core\Spx.Core.csproj" />
   </ItemGroup>
 
 </Project>
